--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,12 @@
 
 @media only screen and (min-width: 401px) and (max-width: 960px) {
     body {
-        background-color: #F5CF8E;
+        .sign-up,
+        .feature-1,
+        .feature-2,
+        .feature-3 {
+            width: 50%;
+        }
     }
 }
 
